# totoast

./: LICENSE  Pipfile  setup.cfg
tests/: test_data.py  test_settings.py
tests/test_settings/: get_options2.toml
totoast/: data.py  settings.py
