[metadata]
name = ToToast
version = 0.0.1-alpha
description = The tool to use when Doing your tasks just isn't enough.
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
setup_requires = pytest-runner;
install_requires = funcy;toml;
tests_require = pytest;pytest-datadir;pytest-mock;

[aliases]
test = pytest
